--- a/estilos.css
+++ b/estilos.css
@@ -88,6 +88,7 @@ header nav ul li {
 	display: flex;
 	position: absolute;
 	flex-direction: column;
+	text-align: left;
 	top: 55px;
 }
 
@@ -100,7 +101,7 @@ nav li .opciones {
 }
 
 .submenu {
-	width: 60px;
+	width: 80px;
 }
 
 .botoneraheader {
@@ -145,7 +146,7 @@ h3 {
 	font-family: 'Original Surfer', cursive;
 	color: #508B59;
 	font-size: 1.8em;
-	padding-top: 20px;
+	padding-top: 50px;
 	padding-bottom: 20px;
 	text-align: center;
 	flex-direction: row;
@@ -500,7 +501,7 @@ input type, label{
 }
 
 .carrusel ul {
-	list-style: none;
+	list-style:none;
 	margin: 0px;
 	padding:0px;
 	max-width: 900px;
@@ -510,6 +511,7 @@ input type, label{
 	display:flex;
 	gap:10px;
 	overflow:auto;
+	color: #508B59;
 }
 
 .carrusel-fotos img {
@@ -603,7 +605,7 @@ input type, label{
 	padding-bottom:10px;
 	margin-left:25px;
 	margin-right:10px;
-	margin-top: 10px;
+	margin-top: 20px;
 	margin-bottom: 10px;
 }
 
@@ -633,7 +635,7 @@ input type, label{
 	border:none;
 	padding-left: 10px;
 	padding-right: 10px;
-	margin-top: 10px;
+	margin-top: 20px;
 	height: 45px;
 }
 
@@ -679,10 +681,6 @@ justify-content:flex-start;
 align-items:center;
 padding:10px;
 background: #EC881D;
-}
-
-.medida{
-	padding-top: 20px;
 }
 
 /*------------------ MAIN FORO-------------------*/
@@ -854,6 +852,7 @@ footer {
 	padding:30px 0px 35px 0px;
 	display: flex;
 	justify-content: space-around;
+	position: absolute;
 }
 
 a {
