--- a/estilos.css
+++ b/estilos.css
@@ -194,6 +194,7 @@ p {
 	color: #508B59;
 	font-size: 1.2em;
 	padding-top: 10px;
+	
 }
 
 h11 {
@@ -536,13 +537,17 @@ input type, label{
 }
 
 .restaurante {
-	width: 80%;
+	width: 60%;
 	height: fit-content;
 	background: #F9EEE6;
 	border-radius:18px;
 	padding: 25px;
 }
 
+
+.restaurante p {
+	width: 500px;
+}
 .textoquepodesencontrarbienvenida{
 	padding-left:50px;
 	padding-right: 70px;
@@ -722,6 +727,14 @@ h9 {
 	padding-top: 40px;
 }
 
+.preguntasforo {
+	width: 300px;
+	padding-left: 100px;
+	
+}
+
+
+
 .introforo {
 	display: flex;
 	flex-direction: column;
@@ -739,14 +752,16 @@ h9 {
 }
 
 .preguntas {
+	align-items: center;
+	justify-content: center;
 	margin: 20px 40px 20px 40px;
 	padding: 20px;
 	border-style: solid;
 	border-width: 3px;
 	border-radius: 30px;
 	border-color: #EC881D;
-	padding-left: 50px;
-	padding-right: 50px;
+	
+	padding-right: 100px;
 	gap: 60px;
 }
 
@@ -763,6 +778,7 @@ h10 {
 	display: flex;
 	flex-direction: column;
 	justify-content: flex-end;
+	align-items: center;
 }
 
 .fondocremita {
