--- a/estilos.css
+++ b/estilos.css
@@ -963,3 +963,97 @@ a {
 	font-size: 1em;
 	padding-top: 5px;
 }
+
+
+
+
+/*------------------RESPONSIVE-------------------*/
+
+@media screen and (max-width: 600px) {
+	
+
+
+/*------------------MAIN INICIO-------------------*/
+
+
+.maincolumnas{
+	background-image: none;
+	display: flex;
+}
+
+	.columnaizq {
+		position: fixed;
+	}
+	
+	
+
+	
+
+.registro {
+	flex-direction: column;
+	display: flex;
+    align-items: center;
+	gap: 35px;
+}
+
+.boton {
+	width: 70%;
+}
+
+.textoquepodesencontrar {
+	width: 60%;
+	margin-left: 0px;
+}
+
+	.columnader {
+    display: flex;
+    align-items: center;
+	
+	}
+	
+.textosabesloquees {
+	width: 60%;
+	margin-left: 0px;
+}
+
+.circulos {
+	width: 100%;
+	justify-content: space-evenly;
+	padding-top: 50px;
+	padding-bottom: 100px;
+	align-content: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+	h3 {
+		color: #EC881D;
+	}
+	
+
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+	
+}
+
