--- a/estilos.css
+++ b/estilos.css
@@ -495,70 +495,70 @@ input type, label{
 
 /*------------------MAIN SINTAXIS PALERMO-------------------*/
 
-.carrusel {
-	display:flex;
-	gap:10px;
-	
-	justify-content: flex-start;
+.container {
+	margin:auto;
+	width: 800px;
+	padding:30px;
+}
+
+.menu {
+	text-align: center;
+	margin:20px;
+}
+.menu a {
+	color:black;
+}
+
+.slider {
+	position: relative;
+	width:800px;
+	height: 300px;
+}
+
+.slider li {
+	position: absolute;
+	left: 0px;
+	top:0;
+	opacity:0;
+	width:inherit;
+	height: inherit;
+	transition: opacity .5s;
 	
 	
 }
 
-.carrusel ul {
-	list-style:none;
-	margin: 0px;
-	padding:0px;
-	max-width: 800px;
+.slider li img {
+	
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+	
+}
+.slider li:first-child {
+	opacity: 1;
+	
 }
 
-.carrusel-fotos {
-	display:flex;
-	gap:10px;
-	overflow:auto;
-	color: #508B59;
+.slider li:target {
+	opacity: 1;
 }
 
-.carrusel-menu {
-	display:none;
+.menu li {
+	display:inline-block;
+	text-align: center;
 }
-.carrusel-fotos img {
-	width: 300px;
-	height:200px;
+.menu li a {
+	display:inline-block;
+	color:white;
+	font-family: "open-sans";
+	text-decoration: none;
+	background-color:#508B59;
+	padding:10px;
+	width: 20px;
+	height: 20px;
+	font-size:20px;
+	border-radius: 30px;
 }
-
-
-@media screen and (min-width: 600px) {
-	.carrusel-fotos {
-	overflow: hidden;
-	}
-	
-	.carrusel-fotos img {
-		width: 500px;
-		height: 400px;
-	}
-	
-	.carrusel-menu {
-		display:block;
-	}
-	
-	.carrusel-menu img { 
-	
-	width: 50px; 
-	height:40px;
-	
-	}
-
-	.carrusel-menu img:hover {
-		border:none;
-	}
-
-
-}
-
-
-
-
-
 
 
 
