--- a/estilos.css
+++ b/estilos.css
@@ -252,7 +252,7 @@ h12 {
 
 .maincolumnas{
 	max-width: 100%;
-	background-image:url("img/forma fondo.jpg");
+	background-image:url("img/formafondo72.png");
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-size: 100% auto;
