--- a/estilos.css
+++ b/estilos.css
@@ -59,6 +59,7 @@ header {
 	align-items: center;
 	justify-content: space-between;
 	position: fixed;
+	z-index: 5;
 }
 
 header div {
@@ -122,6 +123,10 @@ nav li .opciones {
 
 .botoneraheader ul li{
 	cursor: pointer;
+}
+
+.botoneramobile{
+	display: none;
 }
 
 /*------------------MAIN GENERAL-------------------*/
@@ -794,6 +799,7 @@ h9 {
 
 .preguntas {
 	height: 190px;
+	width: 60%;
 	align-items: center;
 	justify-content: center;
 	margin: 20px 70px 40px 70px;
@@ -804,6 +810,13 @@ h9 {
 	border-color: #EC881D;
 	padding-right: 100px;
 	gap: 60px;
+	
+}
+
+.sectionpreguntasforo {
+	display: flex;
+	flex-direction: row;
+	padding: 5px 0px 5px 0px;
 }
 
 h10 {
@@ -826,6 +839,9 @@ h10 {
 	background-color: #F9EEE6;
 	margin-top: 30px;
 	padding-bottom: 60px;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .botonesforo {
@@ -855,19 +871,21 @@ h10 {
 	justify-content: center;
 	gap: 20px;
 	padding-top: 50px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
-.recomendado{
-	height: 500px;;
-	width: 20%;
-	border-radius: 25px;
-	background-color:#EC881D;
-	margin-right: 2%;
-	text-align: center;
-	padding:20px 0px 30px 60px;
-	justify-content:space-between;
-	margin-left: 40px;
-	margin-bottom: 40px;
+.recomendado {
+    height: 500px;
+    width: 50%;
+    border-radius: 25px;
+    background-color: #EC881D;
+    text-align: center;
+    padding: 20px 20px 20px 20px;
+    justify-content: space-between;
+    margin-: 0px;
+    align-items: center;
 }
 
 .recomendado:hover{
@@ -885,7 +903,7 @@ h10 {
 	height: 190px;
 	font-family:"original-surfer";
 	margin: 20px 70px 70px 70px;
-	padding: 40px 20px 20px 260px;
+	padding: 30px 70px 30px 70px;
 	border-style: solid;
 	border-width: 3px;
 	border-radius: 30px;
@@ -981,9 +999,9 @@ a {
 	display: flex;
 }
 
-	.columnaizq {
-		position: fixed;
-	}
+.columnaizq {
+	position: fixed;
+}
 	
 	
 
@@ -1017,38 +1035,169 @@ a {
 }
 
 .circulos {
-	width: 100%;
-	justify-content: space-evenly;
-	padding-top: 50px;
-	padding-bottom: 100px;
-	align-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+	
+	.letrasblancas {
+		color: #EC881D;
+	}
+
+	.sabes {
+		padding-top: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+	}
+	
+	h3 {
+		padding-bottom: 80px;
+	}	
+	
+	
+/*------------------MAIN INICIAR SESIÓN REGISTRARSE-------------------*/
+	
+	.ingresar{
+		flex-direction: row;
+		flex-wrap:wrap;
+		align-items: center;
+	}	
+	.formulario-inicio{
+		width:100%;
+	}
+	.logo{
+		margin-left:90px;
+	}	
+	
+	
+	
+	/*------------------FORO-------------------*/
+	
+	#encabezadoforo {
+    gap: 30px;
+    padding-left: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+	
+	.globo {
+		left: 240px;
+	}
+  
+.preguntasforo {
+	width: 80%;
+	padding-bottom: 30px;
+}
+
+.introforo {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 }
 
-	h3 {
-		color: #EC881D;
+.foro {
+	background-color: white;
+	padding-top: 100px;
+}
+
+.center {
+	display: flex;
+	justify-content: center;
+}
+
+.preguntas {
+	height: fit-content;
+	width: 80%;
+	margin: 20px 60px 40px 60px;
+	padding: 30px;
+	padding-right: 0px;
+	gap: 40px;
+	
+}
+
+	p {
+		font-size: 1em;
 	}
 	
+	.sectionpreguntasforo {
+	display: flex;
+	flex-direction: column;
+	padding: 5px 0px 5px 0px;
+}
+	
+h10 {
+	font-family: 'Inika', serif;
+	color: #508B59;
+	font-size: 1.2em;
+	display: flex;
+	justify-content: center;
+	font-weight: 700;
+}
 
+.divbotonesforo {
+	display: flex;
+	flex-direction: column;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.fondocremita {
+	background-color: #F9EEE6;
+	margin-top: 30px;
+	padding-bottom: 60px;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.botonesforo {
+	height: 30px;
+	width: 210px;
+	background-color:#508B59;
+	border-radius:30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+}
+
+.botonesforocrema{
+	background-color: #F9EEE6;
+	height: 30px;
+	width: 210px;
+	border-radius:30px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #508B59;
+}
+
+.sitiosrecomendados {
+	width: 100%;
+	justify-content: center;
+	gap: 20px;
+	padding-top: 50px;
+}
+
+.recomendado{
+	 height: fit-content;
+    width: 50%;
+    padding: 20px;
+    gap: 20px;
+    margin-left: 0px;
+    margin-bottom: 40px;
+}
+
+
+
+.formularioforo {
+	height: 180px;
+	margin: 20px;
+	padding: 30px;
+	gap: 40px;
+}
+
 	
 	
 	
