--- a/estilos.css
+++ b/estilos.css
@@ -260,11 +260,10 @@ h12 {
 
 .maincolumnas{
 	max-width: 100%;
-	background-image: url("img/formafondonueva.png");
+	background-image: url("img/formafondo72.png");
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-size: 100% auto;
-	
 	height: inherit;
 }
 
@@ -1233,12 +1232,15 @@ h10 {
 	
 	
 	
+	/*------------------FOOTER-------------------*/
 	
+	.responsiveoculto{
+		display: none;
+	}
 	
-	
-	
-	
-	
+	h5{
+		justify-content: flex-end;
+	}
 	
 	
 	
