ordene la carpeta de imagenes y volvi a linkear los htmls

--- a/estilos.css
+++ b/estilos.css
@@ -260,7 +260,7 @@ h12 {
 
 .maincolumnas{
 	max-width: 100%;
-	background-image: url("img/formafondo72.png");
+	background-image: url("img/formafondonueva.png");
 	background-repeat: no-repeat;
 	background-attachment: scroll;
 	background-size: 100% auto;
@@ -385,6 +385,8 @@ article {
 	font-family:"Inika", serif;
 }
 
+
+
 .Controles{
 	background:#EC881D;
 	padding:10px 20px 10px 10px;
@@ -419,7 +421,7 @@ article {
 	cursor: pointer;	
 }
 	
-.olvidaste-contraseña, label{
+.olvidastecontrasenia, label{
 	color:white;
 }
 
@@ -429,7 +431,7 @@ label{
 	padding-top: 60px;
 }
 
-.olvidaste-contraseña{
+.olvidastecontrasenia {
 	text-decoration:none;
 	background: #EC881D;
 	border: none;
@@ -546,7 +548,7 @@ input type, label{
 	
 	width: 100%;
 	height: 500px;
-	object-fit: cover;
+	border: white;
 	
 	
 }
@@ -652,6 +654,15 @@ input type, label{
 	padding-top: 15px;
 	padding-bottom: 15px;
 }
+#Mensaje {
+	border-radius: 30px;
+	border:none;
+	padding-left: 10px;
+	padding-right: 10px;
+	margin-top: 20px;
+	height: 45px;
+}
+
 
 .botonverforo{
 	width:35%;
@@ -709,6 +720,7 @@ input type, label{
 	margin-top: 50px;
 }
 
+
 .numerodepaso {
 	font-size: 5em;
 	width: 10%;
@@ -763,6 +775,11 @@ background: #EC881D;
 	to { 
 	padding-top: 50px;}
 }
+
+
+
+
+
 
 #pregunta {
 	width: 660px;
