--- a/estilos.css
+++ b/estilos.css
@@ -514,8 +514,17 @@ input type, label{
 
 .sectionrestaurante {
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
+	width:70%;
+	height: fit-content;
+	border-radius:18px;
+	background: #F9EEE6;
+	padding:20px;
+	margin:15px;
+	
+	
 }
+
 
 .container {
 	margin:auto;
@@ -584,16 +593,6 @@ input type, label{
 	border-radius: 30px;
 }
 
-.aside {
-	width: 25%;
-	Height: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content:flex-start;
-	align-items:center;
-	padding:10px;
-	background: #EC881D;
-}
 
 .bold{
 	font-size: 1em;
@@ -677,13 +676,13 @@ input type, label{
 	color: white;
 	font-family: "Original Surfer",cursive;
 	cursor: pointer;
-	padding-left: 15px;
+	padding-left: 20px;
 	padding-right: 15px;
 	padding-top:5px;
 	padding-bottom:10px;
-	margin-left:25px;
+	margin-left:40px;
 	margin-right:10px;
-	margin-top: 20px;
+	margin-top: 25px;
 	margin-bottom: 10px;
 }
 
@@ -753,7 +752,8 @@ input type, label{
 	background: #F9EEE6;
 	border-radius:18px;
 	padding: 0px 30px 20px 30px;
-	margin-top: 50px;
+	margin-top: 40px;
+	
 }
 
 .ingredientes{
@@ -768,7 +768,7 @@ input type, label{
 }
 
 .aside {
-width: 30%;
+width: 20%;
 Height: auto;
 display: flex;
 flex-direction: column;
@@ -1343,6 +1343,8 @@ h10 {
 	padding-left: 50px;
 }
 
-	
+	.imgportada {
+		width: 200%;
+	}
 }
 
